2008-08-20  Sam Steingold  <sds@gnu.org>

	* modules/dbus/configure.in (dbus_int64_t, dbus_int32_t, dbus_uint32_t)
	(dbus_int16_t, dbus_unichar_t, dbus_bool_t): check types
	* modules/dbus/dbus.lisp (def-c-const): import from EXPORTING;
	pass DBusError by reference using (c-pointer DBusError) instead of
	returning a fresh object using (error (c-ptr DBusError) :in-out) et al;
	(DBusMessageIter): add def-c-type

2008-08-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): use ${TRCRLF} to delete '\r' from
	output in addition to replacing '\n' with '_' to fix woe32

2008-08-18  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: make sure that end_system_call() is
	called before all errors and that
	errno is only accessed inside begin_system_call/end_system_call

2008-08-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate): call
	end_system_call(); before signaling errors
	(I_to_file_offset, FILE-SIZE) [WIN32_NATIVE]: use LARGE_INTEGER.QuadPart
	(stream_truncate) [WIN32_NATIVE]: fix LARGE_INTEGER literal

2008-08-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate, FILE-SIZE):
	handle WIN32_NATIVE before HAVE_TRUNCATE & HAVE_FTRUNCATE because
	WIN32_NATIVE has a broken ftruncate (similar to fstat: accept some
	unknown int instead of a handle)
	(I_to_offset, STREAM-LOCK, %SETHOSTID): check arg type before conversion
	(file_offset_t): new type, necessary because file offset in win32
	is represented by a non-integer type LARGE_INTEGER
	(I_to_file_offset): convert from an integer
	(path_truncate, stream_truncate): accept length of type file_offset_t
	(%SET-FILE-SIZE): use I_to_file_offset
	(FILE-SIZE): use L2_to_I for WIN32_NATIVE

2008-08-15  Sam Steingold  <sds@gnu.org>

	* pathname.d (find_first_file): fix FindFirstFile call

2008-08-14  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (HOSTID): rename from GETHOSTID
	(%SETHOSTID) [HAVE_SETHOSTID]: add